feat(Parser): 입력으로 주어진 메뉴 이름을 검사하고파싱하는 기능 추가