@@ -1,24 +1,34 @@
 package christmas.domain;
 
-import java.util.Arrays;
-import java.util.Collections;
+import christmas.Utils.Parser;
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 public class Menus {
     private final List<Menu> menus;
-    private Menus(String menus){
-        validateMenus(menus);
-//        System.out.print(Arrays.stream(menus.split(",")).map((r)->Menu.of(r).name).collect(Collectors.toList()));
-        this.menus = Arrays.stream(menus.split(",")).map(Menu::of).collect(Collectors.toList());
+
+    private Menus(String menus) {
+        List<String> parsed = Parser.parseMenuInput(menus);
+        validateSize(parsed);
+        this.menus = parsed.stream().map(Menu::of).toList();
     }
 
 
-    public static Menus from(String menus){
+    public static Menus from(String menus) {
         return new Menus(menus);
     }
-    private void validateMenus(String s) {
+
+    private void validateSize(List<String> parsed) {
+        if (parsed.size() > 20) {
+            throw new IllegalArgumentException("MENU TOO MANY");
+        }
     }
 
+
+    public Integer totalPrice() {
+        int total = 0;
+        for (Menu menu : menus) {
+            total += menu.getPrice();
+        }
+        return total;
+    }
 }
